# LinkDove

./: ClassesDiagram  README.txt  Лаба1.odt  Лаба2.odt
lab2/: ClassesDiagram  Лаба2.odt
lab3/: .gitignore  loginwidget.cpp  loginwidget.h  profilewidget.cpp  profilewidget.h  КурсоваяРаботаООП.odt
lab3/LinkDove/: CMakeLists.txt  IStreamConnection.h  aboutappdialog.cpp  aboutappdialog.h  aboutappdialog.ui  actionsdialog.cpp  actionsdialog.h  actionsdialog.ui  actionslabel.cpp  actionslabel.h  agreedialog.cpp  agreedialog.h  agreedialog.ui  bandialog.cpp  bandialog.h  bandialog.ui  baninterlocutordialog.cpp  baninterlocutordialog.h  baninterlocutordialog.ui  channelcard.cpp  channelcard.h  channelcard.ui  channellist.cpp  channellist.h  channellist.ui  channelwidget.cpp  channelwidget.h  channelwidget.ui  chatcard.cpp  chatcard.h  chatcard.ui  chatlist.cpp  chatlist.h  chatlist.ui  chatwidget.cpp  chatwidget.h  chatwidget.ui  clickablelabel.cpp  clickablelabel.h  client.cpp  (+90 more)
lab3/LinkDoveServer/: CMakeLists.txt  LinkDoveDatabase.h  StatusInfo.cpp  StatusInfo.h  UserInfo.cpp  UserInfo.h  linkdovepsqldatabase.cpp  linkdovepsqldatabase.h  linkdoveserver.cpp  linkdoveserver.h  linkdovesqldatabase.cpp  linkdovesqldatabase.h  main.cpp  tcpconnection.h  utility.cpp  utility.h
lab3/common_source/: BroadcastNotification.cpp  BroadcastNotification.h  CMakeLists.txt  StatusInfo.cpp  StatusInfo.h  UserInfo.cpp  action.cpp  action.h  audiomanager.cpp  audiomanager.h  audiomanagersingleton.cpp  audiomanagersingleton.h  audiomessagecontent.cpp  audiomessagecontent.h  channelinfo.cpp  channelinfo.h  channelmessage.cpp  channelmessage.h  chatinfo.cpp  chatinfo.h  complaint.cpp  complaint.h  constants.cpp  constants.h  groupmessage.cpp  groupmessage.h  imagemessagecontent.cpp  imagemessagecontent.h  imessage.cpp  imessage.h  imessagecontent.cpp  imessagecontent.h  individualmessage.cpp  individualmessage.h  logininfo.cpp  logininfo.h  notification.cpp  notification.h  shortstatusinfo.cpp  shortstatusinfo.h  (+5 more)
